# 2025-Vision-Train-Lecture

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  slides.md
.github/workflows/: deploy.yml
Project/: project.md
Project/opencv_cam_calibration/: CMakeLists.txt  README.md
Project/opencv_cam_calibration/data/: camera_conf.xml
Project/opencv_cam_calibration/images/: imageLists.xml
Project/opencv_cam_calibration/src/: camera_calibration.cpp
assignment/Assignment1/: README.md
assignment/Assignment2/: README.md
lecture/Lecture1/: Lecture0.md  Lecture1.md
lecture/Lecture10/: Lecture10.md  source.md
lecture/Lecture2/: Lecture2.md
lecture/Lecture2/code/: hello_world.cpp
lecture/Lecture3/: Lecture3.md
lecture/Lecture3/code/: hello_world.cpp
lecture/Lecture4/: Lecture4.md
lecture/Lecture5/: Lecture5.md
lecture/Lecture6/: Lecture6.md
lecture/Lecture7/: Lecture7-presentation.md  Lecture7.md
lecture/Lecture8/: Lecture8.ipynb  Lecture8.md  hsv.html
lecture/Lecture8/.ipynb_checkpoints/: Lecture8-checkpoint.ipynb
lecture/Lecture9/: Lecture10.md  Lecture9.md  calibration.md  lecture10.md  lecture9.md
lecture/Week1/: Lecture0.md  Lecture1.md
script/: build.cjs
